# fastapi-crud

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test.py
app/: depandencies.py  dependencies.py  main.py  models.py  routes.py
app/routers/: books.py
