[project]
name = "fastapi-crud-service"
version = "0.1.0"
description = "Fast API CRUD Service for Task Management"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
